Fixed overflow problem for '<img>' inside the markdown view div

--- a/css/app.scss
+++ b/css/app.scss
@@ -169,6 +169,10 @@ body {
                 //min-height: 615px;
                 margin-bottom: 4px;
 
+                img {
+                    max-width: 100%;
+                }
+
 
             }
         }
